# sk-autodocs

./: README.md  pyproject.toml
sk_autodocs/: autodocs.py  code_fetcher.py  log_parser.py  main.py
sk_autodocs/plugins/AutoDocs/Rewrite/: config.json  skprompt.txt
